# scrapExample

./: product_search_example.csv  pyproject.toml  readme.txt  scrap_mercado_libre.py
clasesAuxiliares/: csvExporter.py  httpFetcher.py
